--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.1",
     "axios": "^1.7.7",
     "lodash.debounce": "^4.0.8",
     "nuqs": "^2.2.3",
@@ -20,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
