--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
 		"noFallthroughCasesInSwitch": true // Report errors for fallthrough cases in switch statement
 	},
 	"include": [
-		"src"
+		"src",
+		"src/@types"
 	]
 }
