--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.1",
+    "ahooks": "^3.8.4",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "lodash.debounce": "^4.0.8",
     "nuqs": "^2.2.3",
     "qs": "^6.13.1",
