--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.1",
+    "@types/react-loadable": "^5.5.11",
     "ahooks": "^3.8.4",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "loadable": "^1.0.0",
     "lodash.debounce": "^4.0.8",
     "nuqs": "^2.2.3",
     "qs": "^6.13.1",
     "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
+    "react-loadable": "^5.5.0",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
